--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
         "@tailwindcss/typography": "^0.5.2",
         "@vitejs/plugin-vue": "^4.0.0",
         "@vue/server-renderer": "^3.2.31",
-        "autoprefixer": "^10.4.7",
+        "autoprefixer": "^10.4.15",
         "axios": "^1.1.2",
+        "flowbite": "^1.8.1",
         "laravel-vite-plugin": "^0.8.0",
-        "postcss": "^8.4.14",
-        "tailwindcss": "^3.1.0",
+        "postcss": "^8.4.29",
+        "tailwindcss": "^3.3.3",
         "vite": "^4.4.9",
         "vue": "^3.2.31"
     }
